--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,10 +1,10 @@
 {
-	"extName": {
-		"message": "Netflix Party",
-		"description": "Extension name"
-	},
-	"extDescription": {
-		"message": "A tool for synchronized Netflix consumption",
-		"description": "Extension description"
-	}
+  "extName": {
+    "message": "Netflix Party",
+    "description": "Extension name"
+  },
+  "extDescription": {
+    "message": "Watch Netflix remotely with friends",
+    "description": "Extension description"
+  }
 }
